@@ -2,6 +2,11 @@ Revision history for MooseX-Role-Logger
 
 {{$NEXT}}
 
+    [Incompatible Change]
+
+    - The role now provides private method '_logger' rather than
+      public method 'logger' (thanks, mst)
+
 0.001     2013-10-03 00:24:33 America/New_York
 
     - First release
